--- a/config/database.yml
+++ b/config/database.yml
@@ -10,9 +10,13 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
-
+  adapter: mysql2
+  reconnect: false
+  pool: 5
+  username: root
+  password: Wangjiadong1215
+  host:   127.0.0.1
+  database: NUS_development
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -21,5 +25,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  reconnect: false
+  pool: 5
+  username: root
+  password: Wangjiadong1215
+  host:   127.0.0.1
+  database: NUS_development
